@@ -1,6 +1,5 @@
 buildscript {
     repositories {
-        // These repositories are only for Gradle plugins, put any other repositories in the repository block further below
         maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
         mavenCentral()
     }
@@ -48,6 +47,11 @@ repositories {
     maven { url = 'https://jitpack.io' }
     maven { url = 'https://oss.sonatype.org/content/repositories/snapshots/' }
     maven { url = 'https://libraries.minecraft.net/' }
+    maven {
+        name = 'CodeMC-OcclusionCulling'
+        url = 'https://ci.codemc.io/job/LogisticsCraft/job/OcclusionCulling/lastSuccessfulBuild/artifact/'
+    }
+    maven { url 'https://repo.codemc.io/repository/maven-public/' }
     mavenCentral()
 }
 minecraft {
@@ -69,11 +73,21 @@ minecraft {
 
         client {
             property 'forge.enabledGameTestNamespaces', mod_id
+            jvmArgs += [
+                    '--add-modules', 'jdk.incubator.foreign',
+                    '--enable-preview',
+                    '-Dforeign.restricted=permit'
+            ]
         }
 
         server {
             property 'forge.enabledGameTestNamespaces', mod_id
             args '--nogui'
+            jvmArgs += [
+                    '--add-modules', 'jdk.incubator.foreign',
+                    '--enable-preview',
+                    '-Dforeign.restricted=permit'
+            ]
         }
         gameTestServer {
             property 'forge.enabledGameTestNamespaces', mod_id
@@ -90,44 +104,39 @@ mixin {
     add sourceSets.main, "graphene.refmap.json"
     config "graphene.mixins.json"
     config 'graphene.mixins.ae2wtlib.json'
-    debug.verbose = true
-    debug.export = true
-    dumpTargetOnFailure = true
-    quiet = false
 }
 
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 dependencies {
     minecraft 'net.minecraftforge:forge:1.20.1-47.4.0'
+
+    implementation files('lib/cloth.jar')
+    implementation files('lib/ae2wtlib.jar')
     implementation 'com.esotericsoftware:kryo:5.6.2'
-    implementation 'org.apache.commons:commons-math3:3.6.1'
-    compileOnly fg.deobf("curse.maven:starlight-forge-526854:4631193")
-    implementation 'com.google.guava:guava:31.1-jre'
-    implementation 'com.github.luben:zstd-jni:1.5.5-5'
     implementation 'org.joml:joml:1.10.5'
     implementation 'org.spongepowered:mixin:0.8.5'
-    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
     implementation "com.github.ben-manes.caffeine:caffeine:3.2.0"
-    jarJar("com.github.ben-manes.caffeine:caffeine:3.2.0") {
-        jarJar.ranged(it, "[3.2.0,3.3.0)")
-    }
     implementation(annotationProcessor("io.github.llamalad7:mixinextras-common:0.2.0"))
     implementation(jarJar("io.github.llamalad7:mixinextras-forge:0.2.0")) {
         jarJar.ranged(it, "[0.2.0,)")
     }
-    compileOnly fg.deobf("maven.modrinth:distanthorizons:2.3.4-b-1.20.1")
     implementation files('lib/1.jar')
-    implementation 'net.jpountz.lz4:lz4:1.3.0'
-    implementation files('lib/cloth.jar')
-    implementation files('lib/ae2wtlib.jar')
-    implementation 'org.ow2.asm:asm-tree:9.4'
-    compileOnly 'org.projectlombok:lombok:1.18.28'
-    annotationProcessor 'org.projectlombok:lombok:1.18.28'
-    implementation 'com.esotericsoftware:kryo:5.4.0'
-    jarJar("com.esotericsoftware:kryo:5.4.0") {
-        jarJar.ranged(it, "[5.4.0,6.0.0)")
+    implementation "com.logisticscraft:occlusionculling:0.0.8-SNAPSHOT"
+
+    jarJar("com.github.ben-manes.caffeine:caffeine:3.2.0") {
+        jarJar.ranged(it, "[3.2.0,3.3.0)")
     }
+    jarJar("com.logisticscraft:occlusionculling:0.0.8-SNAPSHOT") {
+        jarJar.ranged(it, "[0.0.8,1.0.0)")
+    }
+    jarJar("com.esotericsoftware:kryo:5.6.2") {
+        jarJar.ranged(it, "[0.0.1,6.0.0)")
+    }
+    compileOnly 'org.projectlombok:lombok:1.18.28'
+
+    annotationProcessor 'org.projectlombok:lombok:1.18.28'
+    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 }
 
 tasks.named('processResources', ProcessResources).configure {
@@ -152,7 +161,7 @@ tasks.named('jar', Jar).configure {
                     "Implementation-Version"  : project.jar.archiveVersion,
                     "Implementation-Vendor"   : mod_authors,
                     "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-                    "MixinConfigs": "${mod_id}.mixins.json,${mod_id}.compat.dh.mixins.json,${mod_id}.mixins.ae2wtlib.json"
+                    "MixinConfigs": "${mod_id}.mixins.json,${mod_id}.mixins.ae2wtlib.json"
         ])
     }
     from {
@@ -166,7 +175,6 @@ tasks.named('jar', Jar).configure {
     from sourceSets.main.output
     include "**/${mod_id}.refmap.json"
     include "**/${mod_id}.mixins.json"
-    include "**/${mod_id}.compat.dh.mixins.json"
     include "**/${mod_id}.mixins.ae2wtlib.json"
     finalizedBy 'reobfJar'
 
@@ -174,16 +182,20 @@ tasks.named('jar', Jar).configure {
 
 tasks.withType(JavaCompile).configureEach {
     options.release = 17
-    options.compilerArgs << "-Xlint:deprecation" << "-Xlint:unchecked"
+    options.compilerArgs << "-Xlint:deprecation" << "-Xlint:unchecked" << "--add-modules" << "jdk.incubator.foreign"
+    options.compilerArgs << "--enable-preview"
     options.encoding = 'UTF-8'
 }
 shadowJar {
     mergeServiceFiles()
     exclude 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA'
+    relocate 'com.esotericsoftware', 'graphene.com.esotericsoftware'
+    relocate 'com.logisticscraft', 'graphene.com.logisticscraft'
+    relocate 'com.github.benmanes.caffeine', 'graphene.com.github.benmanes.caffeine'
 
 }
 jar {
     manifest.attributes([
-            "MixinConfigs": "graphene.refmap.json,graphene.mixins.json,graphene.compat.dh.mixins.json"
+            "MixinConfigs": "graphene.refmap.json,graphene.mixins.json"
     ])
 }
